hugr-llvm/src/extension/collections/snapshots/hugr_llvm__extension__collections__list__test__length@llvm14.snap
---
source: hugr-llvm/src/extension/collections/list.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define { i8*, i64 } @_hl.main.1(i8* %0) {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  %1 = call i64 @__rt__list__length(i8* %0)
  %mrv = insertvalue { i8*, i64 } undef, i8* %0, 0
  %mrv9 = insertvalue { i8*, i64 } %mrv, i64 %1, 1
  ret { i8*, i64 } %mrv9
}

declare i64 @__rt__list__length(i8*)
