hugr-llvm/src/extension/collections/snapshots/hugr_llvm__extension__collections__list__test__pop@llvm14.snap
---
source: hugr-llvm/src/extension/collections/list.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define { i8*, { i1, i16 } } @_hl.main.1(i8* %0) {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  %1 = alloca i16, align 2
  %2 = bitcast i16* %1 to i8*
  %3 = call i1 @__rt__list__pop(i8* %0, i8* %2)
  %4 = bitcast i8* %2 to i16*
  %5 = load i16, i16* %4, align 2
  %6 = insertvalue { i1, i16 } { i1 true, i16 poison }, i16 %5, 1
  %7 = select i1 %3, { i1, i16 } %6, { i1, i16 } { i1 false, i16 poison }
  %mrv = insertvalue { i8*, { i1, i16 } } undef, i8* %0, 0
  %mrv9 = insertvalue { i8*, { i1, i16 } } %mrv, { i1, i16 } %7, 1
  ret { i8*, { i1, i16 } } %mrv9
}

declare i1 @__rt__list__pop(i8*, i8*)
