hugr-llvm/src/extension/collections/snapshots/hugr_llvm__extension__collections__list__test__pop@pre-mem2reg@llvm14.snap
---
source: hugr-llvm/src/extension/collections/list.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define { i8*, { i1, i16 } } @_hl.main.1(i8* %0) {
alloca_block:
  %"0" = alloca i8*, align 8
  %"01" = alloca i8*, align 8
  %"1" = alloca { i1, i16 }, align 8
  %"2_0" = alloca i8*, align 8
  %"4_0" = alloca i8*, align 8
  %"4_1" = alloca { i1, i16 }, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store i8* %0, i8** %"0", align 8
  %"02" = load i8*, i8** %"0", align 8
  store i8* %"02", i8** %"2_0", align 8
  %"2_03" = load i8*, i8** %"2_0", align 8
  %"2_04" = load i8*, i8** %"2_0", align 8
  %1 = alloca i16, align 2
  %2 = bitcast i16* %1 to i8*
  %3 = call i1 @__rt__list__pop(i8* %"2_04", i8* %2)
  %4 = bitcast i8* %2 to i16*
  %5 = load i16, i16* %4, align 2
  %6 = insertvalue { i1, i16 } { i1 true, i16 poison }, i16 %5, 1
  %7 = select i1 %3, { i1, i16 } %6, { i1, i16 } { i1 false, i16 poison }
  store i8* %"2_04", i8** %"4_0", align 8
  store { i1, i16 } %7, { i1, i16 }* %"4_1", align 2
  %"4_05" = load i8*, i8** %"4_0", align 8
  %"4_16" = load { i1, i16 }, { i1, i16 }* %"4_1", align 2
  store i8* %"4_05", i8** %"01", align 8
  store { i1, i16 } %"4_16", { i1, i16 }* %"1", align 2
  %"07" = load i8*, i8** %"01", align 8
  %"18" = load { i1, i16 }, { i1, i16 }* %"1", align 2
  %mrv = insertvalue { i8*, { i1, i16 } } undef, i8* %"07", 0
  %mrv9 = insertvalue { i8*, { i1, i16 } } %mrv, { i1, i16 } %"18", 1
  ret { i8*, { i1, i16 } } %mrv9
}

declare i1 @__rt__list__pop(i8*, i8*)
