hugr-llvm/src/extension/collections/snapshots/hugr_llvm__extension__collections__list__test__push@pre-mem2reg@llvm14.snap
---
source: hugr-llvm/src/extension/collections/list.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define i8* @_hl.main.1(i8* %0, i16 %1) {
alloca_block:
  %"0" = alloca i8*, align 8
  %"1" = alloca i16, align 2
  %"01" = alloca i8*, align 8
  %"2_0" = alloca i8*, align 8
  %"2_1" = alloca i16, align 2
  %"4_0" = alloca i8*, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store i8* %0, i8** %"0", align 8
  store i16 %1, i16* %"1", align 2
  %"02" = load i8*, i8** %"0", align 8
  %"13" = load i16, i16* %"1", align 2
  store i8* %"02", i8** %"2_0", align 8
  store i16 %"13", i16* %"2_1", align 2
  %"2_04" = load i8*, i8** %"2_0", align 8
  %"2_15" = load i16, i16* %"2_1", align 2
  %"2_06" = load i8*, i8** %"2_0", align 8
  %"2_17" = load i16, i16* %"2_1", align 2
  %2 = alloca i16, align 2
  store i16 %"2_17", i16* %2, align 2
  %3 = bitcast i16* %2 to i8*
  call void @__rt__list__push(i8* %"2_06", i8* %3)
  store i8* %"2_06", i8** %"4_0", align 8
  %"4_08" = load i8*, i8** %"4_0", align 8
  store i8* %"4_08", i8** %"01", align 8
  %"09" = load i8*, i8** %"01", align 8
  ret i8* %"09"
}

declare void @__rt__list__push(i8*, i8*)
